Excluded analyzer libs from regular modules, only appended for the mxfanalyzer tool.

--- a/Analyzer/apps/analyzer/Makefile.am
+++ b/Analyzer/apps/analyzer/Makefile.am
@@ -3,4 +3,5 @@ bin_PROGRAMS = mxfanalyzer
 mxfanalyzer_SOURCES = mxfanalyzer.cpp
 
 mxfanalyzer_CXXFLAGS = $(EBUSDK_CFLAGS)
-mxfanalyzer_LDADD = $(EBUSDK_LDADDLIBS)
+mxfanalyzer_LDADD = $(EBUSDK_ANALYZER_LDADDLIBS)
+
