--- a/configure.ac
+++ b/configure.ac
@@ -208,8 +208,12 @@ AC_SUBST(EBUSDK_EBUCORE_LIBADDLIBS)
 EBUSDK_ANALYZER_LIBADDLIBS="\$(top_builddir)/Analyzer/src/libebumxfanalyzer.la -lxerces-c"
 AC_SUBST(EBUSDK_ANALYZER_LIBADDLIBS)
 
-EBUSDK_LDADDLIBS="${EBUSDK_LIBADDLIBS} ${EBUSDK_METADATA_LIBADDLIBS} ${EBUSDK_EBUCORE_LIBADDLIBS} ${EBUSDK_ANALYZER_LIBADDLIBS}"
+dnl EBUSDK_LDADDLIBS="${EBUSDK_LIBADDLIBS} ${EBUSDK_METADATA_LIBADDLIBS} ${EBUSDK_EBUCORE_LIBADDLIBS} ${EBUSDK_ANALYZER_LIBADDLIBS}"
+EBUSDK_LDADDLIBS="${EBUSDK_LIBADDLIBS} ${EBUSDK_METADATA_LIBADDLIBS} ${EBUSDK_EBUCORE_LIBADDLIBS}"
 AC_SUBST(EBUSDK_LDADDLIBS)
+
+EBUSDK_ANALYZER_LDADDLIBS="${EBUSDK_LIBADDLIBS} ${EBUSDK_METADATA_LIBADDLIBS} ${EBUSDK_EBUCORE_LIBADDLIBS} ${EBUSDK_ANALYZER_LIBADDLIBS}"
+AC_SUBST(EBUSDK_ANALYZER_LDADDLIBS)
 
 
 dnl-----------------------------------------------------------------------------
