Added additional libraries for analyzer library too.

--- a/Analyzer/src/Makefile.am
+++ b/Analyzer/src/Makefile.am
@@ -4,3 +4,5 @@ libebumxfanalyzer_la_SOURCES = \
     Analyzer.cpp
 	
 libebumxfanalyzer_la_CXXFLAGS = $(EBUSDK_CFLAGS)
+libebumxfanalyzer_la_LDADD = $(EBUSDK_ANALYZER_LDADDLIBS)
+
