Incorporation and mapping of EBUCore 1.4 changes.

--- a/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj
@@ -94,7 +94,6 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCompoundNameBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreContactBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreContactDetailsBase.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreContainerFormatBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCoordinatesBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCoreMetadataBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCountryBase.cpp" />
@@ -105,20 +104,18 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreDateTypeBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreDescriptionBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreDimensionBase.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreEncodingBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreEntityBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreFormatBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreFormatGroupBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreGenreBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreHeightBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreIdentifierBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreImageFormatBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreLanguageBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreLocationBase.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreLocatorBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreMainFrameworkBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreMediumBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreMetadataSchemeInformationBase.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreMimeTypeBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreObjectTypeBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreOrganisationBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreOrganisationDepartmentBase.cpp" />
@@ -139,6 +136,7 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreSpatialBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreStatusGroupBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreSubjectBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreSubtitlingBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreTargetAudienceBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreTechnicalAttributeAnyURIBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreTechnicalAttributeBooleanBase.cpp" />
@@ -161,6 +159,7 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreTypeGroupBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreVersionBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreVideoFormatBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreWidthBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreAddress.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreAlternativeTitle.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreAncillaryData.cpp" />
@@ -173,7 +172,6 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCompoundName.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreContact.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreContactDetails.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreContainerFormat.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCoordinates.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCoreMetadata.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCountry.cpp" />
@@ -185,20 +183,18 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreDescription.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreDimension.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\EBUCoreDMS++.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreEncoding.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreEntity.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreFormat.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreFormatGroup.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreGenre.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreHeight.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreIdentifier.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreImageFormat.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreLanguage.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreLocation.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreLocator.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreMainFramework.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreMedium.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreMetadataSchemeInformation.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreMimeType.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreObjectType.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreOrganisation.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreOrganisationDepartment.cpp" />
@@ -219,6 +215,7 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreSpatial.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreStatusGroup.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreSubject.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreSubtitling.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreTargetAudience.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreTechnicalAttributeAnyURI.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreTechnicalAttributeBoolean.cpp" />
@@ -241,6 +238,7 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreTypeGroup.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreVersion.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreVideoFormat.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreWidth.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\xsd\EBU_CORE_20121219.cxx" />
     <ClCompile Include="..\..\src\xsd\simpledc20021212.cxx" />
     <ClCompile Include="..\..\src\xsd\xml.cxx" />
