--- a/ebu-mxfsdk.pc.in
+++ b/ebu-mxfsdk.pc.in
@@ -9,4 +9,4 @@ Version: @VERSION@
 Requires: libMXF-@LIBMXF_MAJORMINOR@ libMXF++-@LIBMXFPP_MAJORMINOR@ bmx-@BMX_MAJORMINOR@
 Libs: -L${libdir} -lebucustommetadatasupport-@EBUSDK_MAJORMINOR@ -lebucore-@EBUSDK_MAJORMINOR@ @PC_ADD_LIBS@
 Libs.private: @PC_ADD_PRIVATE_LIBS@
-Cflags: -I${includedir}/ebu-mxsfsdk-@EBUSDK_MAJORMINOR@
+Cflags: -I${includedir}/ebu-mxfsdk-@EBUSDK_MAJORMINOR@
