--- a/Analyzer/msvc_build/vs10/Analyzer.vcxproj
+++ b/Analyzer/msvc_build/vs10/Analyzer.vcxproj
@@ -61,7 +61,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>.;..\..\include;..\..\..\..\apps;..\..\..\ebu-libMXF;..\..\..\ebu-libMXFpp;..\..\..\ebu-bmx\include;..\..\..\CustomMetadataSupport\include;..\..\..\EBUCoreProcessor\include;..\..\..\uriparser\include;..\..\..\include;..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>AS11_EXTENSIONS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
