Minor changes in autoconf parameters and in the automake parameters of the analyzer to build the .pc file for shared libraries under linux

--- a/Analyzer/src/Makefile.am
+++ b/Analyzer/src/Makefile.am
@@ -4,4 +4,5 @@ libebumxfanalyzer_la_SOURCES = \
     Analyzer.cpp
 	
 libebumxfanalyzer_la_CXXFLAGS = $(EBUSDK_CFLAGS)
+libebumxfanalyzer_la_LDFLAGS = 
 libebumxfanalyzer_la_LIBADD = $(EBUSDK_LIBADDLIBS)
