--- a/Analyzer/apps/analyzer/Makefile.am
+++ b/Analyzer/apps/analyzer/Makefile.am
@@ -3,5 +3,4 @@ bin_PROGRAMS = mxfanalyzer
 mxfanalyzer_SOURCES = mxfanalyzer.cpp
 
 mxfanalyzer_CXXFLAGS = $(EBUSDK_CFLAGS)
-mxfanalyzer_LDADD = $(EBUSDK_ANALYZER_LDADDLIBS)
-
+mxfanalyzer_LDADD = ../../src/libebumxfanalyzer.la $(EBUSDK_ANALYZER_LDADDLIBS)
