--- a/EBUCoreProcessor/apps/ebu2mxf/Makefile.am
+++ b/EBUCoreProcessor/apps/ebu2mxf/Makefile.am
@@ -3,6 +3,6 @@ bin_PROGRAMS = ebu2mxf
 ebu2mxf_SOURCES = ebu2mxf.cpp
 
 ebu2mxf_CXXFLAGS = $(EBUSDK_CFLAGS)
-ebu2mxf_LDADD = $(EBUSDK_LDADDLIBS)
+ebu2mxf_LDADD = $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
 
