--- a/EBUCoreProcessor/apps/Makefile.am
+++ b/EBUCoreProcessor/apps/Makefile.am
@@ -10,5 +10,5 @@ libapp_la_SOURCES = \
 	AS11Helper.h
 
 libapp_la_CXXFLAGS = $(EBUSDK_CFLAGS)
-libapp_la_LDFLAGS = $(EBUSDK_LIBADDLIBS)
+libapp_la_LDFLAGS = $(EBUSDK_LIBADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
