--- a/EBUCoreProcessor/apps/mxf2ebu/Makefile.am
+++ b/EBUCoreProcessor/apps/mxf2ebu/Makefile.am
@@ -3,6 +3,6 @@ bin_PROGRAMS = mxf2ebu
 mxf2ebu_SOURCES = mxf2ebu.cpp
 
 mxf2ebu_CXXFLAGS = $(EBUSDK_CFLAGS)
-mxf2ebu_LDADD = $(EBUSDK_LDADDLIBS)
+mxf2ebu_LDADD = $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
 
