--- a/EBUCoreProcessor/apps/raw2bmx/Makefile.am
+++ b/EBUCoreProcessor/apps/raw2bmx/Makefile.am
@@ -2,6 +2,6 @@ bin_PROGRAMS = raw2bmx
 
 raw2bmx_SOURCES = raw2bmx.cpp
 raw2bmx_CXXFLAGS = $(EBUSDK_CFLAGS)
-raw2bmx_LDADD = ../libapp.la $(EBUSDK_LDADDLIBS)
+raw2bmx_LDADD = ../libapp.la $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
 
