Full support of Automake < 1.12.2 and >= 1.12.2

--- a/configure.ac
+++ b/configure.ac
@@ -25,7 +25,7 @@ dnl AC_CONFIG_SRCDIR([src/common/BMXException.cpp])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
-AM_INIT_AUTOMAKE([-Wall -Werror -Wno-extra-portability])
+AM_INIT_AUTOMAKE
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 
