--- a/EBUCoreProcessor/msvc_build/vs10/apps/ebuaudio2mxf/ebuaudio2mxf.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/apps/ebuaudio2mxf/ebuaudio2mxf.vcxproj
@@ -68,7 +68,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\apps\mxf2raw;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXFpp;..\..\..\..\..\ebu-bmx\include;..\..\..\..\..\CustomMetadataSupport\include;..\..\..\..\..\uriparser\include;..\..\..\..\include;..\..\..\..\EBUCoreProcessor\include;..\..\..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\;..\..\..\..\..;..\..\..\..\apps;..\..\..\..\apps\mxf2raw;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXFpp;..\..\..\..\..\ebu-bmx\include;..\..\..\..\..\CustomMetadataSupport\include;..\..\..\..\..\uriparser\include;..\..\..\..\include;..\..\..\..\EBUCoreProcessor\include;..\..\..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
