Inserting and removing dark metadata using a custom KLV key.

--- a/EBUCoreProcessor/msvc_build/vs10/apps/ebu2mxf/ebu2mxf.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/apps/ebu2mxf/ebu2mxf.vcxproj
@@ -81,6 +81,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\apps\AppUtils.cpp" />
     <ClCompile Include="..\..\..\..\apps\ebu2mxf\ebu2mxf.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
