Added new source file for compilation.

--- a/EBUCoreProcessor/apps/raw2bmx/Makefile.am
+++ b/EBUCoreProcessor/apps/raw2bmx/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = raw2bmx
 
-raw2bmx_SOURCES = raw2bmx.cpp
+raw2bmx_SOURCES = raw2bmx.cpp RawInputTrack.cpp
 raw2bmx_CXXFLAGS = $(EBUSDK_CFLAGS)
 raw2bmx_LDADD = ../libapp.la $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
