Also build ebuaudio2mxf.

--- a/EBUCoreProcessor/apps/ebuaudio2mxf/Makefile.am
+++ b/EBUCoreProcessor/apps/ebuaudio2mxf/Makefile.am
@@ -3,5 +3,5 @@ bin_PROGRAMS = ebuaudio2mxf
 ebuaudio2mxf_SOURCES = ebuaudio2mxf.cpp
 
 ebuaudio2mxf_CXXFLAGS = $(EBUSDK_CFLAGS)
-ebuaudio2mxf_LDADD = $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
+ebuaudio2mxf_LDADD = ../libapp.la $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
