Support for custom dark key metadata extraction.

--- a/EBUCoreProcessor/msvc_build/vs10/apps/mxf2ebu/mxf2ebu.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/apps/mxf2ebu/mxf2ebu.vcxproj
@@ -81,6 +81,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\apps\AppUtils.cpp" />
     <ClCompile Include="..\..\..\..\apps\mxf2ebu\mxf2ebu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
