Add libapp dependency for mxf2ebu.

--- a/EBUCoreProcessor/apps/mxf2ebu/Makefile.am
+++ b/EBUCoreProcessor/apps/mxf2ebu/Makefile.am
@@ -3,6 +3,5 @@ bin_PROGRAMS = mxf2ebu
 mxf2ebu_SOURCES = mxf2ebu.cpp
 
 mxf2ebu_CXXFLAGS = $(EBUSDK_CFLAGS)
-mxf2ebu_LDADD = $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
-
+mxf2ebu_LDADD = ../libapp.la $(EBUSDK_LDADDLIBS) $(EBUSDK_METADATA_LIBADDLIBS)
 
