--- a/Analyzer/msvc_build/vs10/apps/mxfanalyzer/mxfanalyzer.vcxproj
+++ b/Analyzer/msvc_build/vs10/apps/mxfanalyzer/mxfanalyzer.vcxproj
@@ -56,8 +56,8 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>Analyzer.lib;libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;CustomMetatadataSupport.lib;EBUCoreProcessor.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>Debug;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\EBUCoreProcessor\msvc_build\vs10\Debug;..\..\..\..\..\CustomMetadataSupport\msvc_build\vs10\Debug;..\..\..\..\..\uriparser\win32\Visual_Studio_2010\Debug;..\..\..\..\..\ebu-bmx\msvc_build\vs10\bmx\Debug;..\..\..\..\msvc_build\vs10\Debug;..\..\..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Analyzer.lib;libMXF.lib;libMXF++.lib;uriparser.lib;expat.lib;bmx.lib;CustomMetatadataSupport.lib;EBUCoreProcessor.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>Debug;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\EBUCoreProcessor\msvc_build\vs10\Debug;..\..\..\..\..\CustomMetadataSupport\msvc_build\vs10\Debug;..\..\..\..\..\uriparser\win32\Visual_Studio_2010\Debug;..\..\..\..\..\ebu-bmx\msvc_build\vs10\bmx\Debug;..\..\..\..\..\ebu-bmx\msvc_build\vs10\expat\Debug;..\..\..\..\msvc_build\vs10\Debug;..\..\..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
