--- a/Analyzer/msvc_build/vs10/apps/mxfanalyzer/mxfanalyzer.vcxproj
+++ b/Analyzer/msvc_build/vs10/apps/mxfanalyzer/mxfanalyzer.vcxproj
@@ -75,8 +75,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>..\..\..\..\..\bin;..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Release;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Release;..\..\..\..\..\uriparser\win32;..\..\..\..\..\ebu-bmx\msvc_build\vs10\bmx\Release;..\..\..\..\msvc_build\vs10\Release;..\..\..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Analyzer.lib;libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;CustomMetatadataSupport.lib;EBUCoreProcessor.lib;xerces-c_3.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\..\..\bin;..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Release;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Release;..\..\..\..\..\uriparser\win32;..\..\..\..\..\ebu-bmx\msvc_build\vs10\bmx\Release;..\..\..\..\msvc_build\vs10\Release;..\..\..\..\..\msvc_build\dependencies\xerces-c-3.1.1-x86-windows-vc-10.0\lib;..\..\..\..\..\ebu-bmx\msvc_build\vs10\expat\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Analyzer.lib;libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;expat.lib;CustomMetatadataSupport.lib;EBUCoreProcessor.lib;xerces-c_3.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
